Laser Pointer Final Code

--- a/RFModuleTesting/RFModuleTesting.ioc
+++ b/RFModuleTesting/RFModuleTesting.ioc
@@ -1,5 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32L0
+PA6.GPIOParameters=GPIO_Label
 RCC.MSI_VALUE=2097000
 ProjectManager.MainLocation=Core/Src
 ProjectManager.ProjectFileName=RFModuleTesting.ioc
@@ -15,12 +16,15 @@ RCC.LPUARTFreq_Value=2097000
 RCC.PLLCLKFreq_Value=24000000
 PA9.GPIO_Label=Y4
 PA12.GPIOParameters=GPIO_Label
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true
 PA9.GPIOParameters=GPIO_Label
 PA11.GPIOParameters=GPIO_Label
 RCC.RTCFreq_Value=37000
+PA3.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=Y2
 ProjectManager.DefaultFWLocation=true
+PA6.GPIO_Label=BUTTON_A
+PB0.GPIO_Label=IR_LASER
 RCC.USART2Freq_Value=2097000
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.DeletePrevious=true
@@ -83,6 +87,7 @@ ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.12.0
 PA0-CK_IN.Signal=ADC_IN0
 MxDb.Version=DB.6.0.20
 PA0-CK_IN.Locked=true
+PB0.GPIOParameters=GPIO_Label
 RCC.APB2Freq_Value=2097000
 PB4.Mode=Full_Duplex_Master
 ProjectManager.BackupPrevious=false
@@ -97,6 +102,7 @@ VP_SYS_VS_Systick.Mode=SysTick
 PA9.Locked=true
 PB7.Signal=GPIO_Input
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA4.GPIOParameters=GPIO_Label
 PB6.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 ProjectManager.FreePins=false
@@ -120,11 +126,13 @@ Mcu.Pin22=VP_SYS_VS_Systick
 PA6.Signal=GPIO_Input
 PB1.Signal=GPIO_Input
 PA1.Locked=true
+PA7.GPIO_Label=BUTTON_HOME
 Mcu.Pin20=PB6
 PA5.Locked=true
 PA3.Locked=true
 PA7.Locked=true
 Mcu.Pin21=PB7
+PA5.GPIO_Label=BUTTON_B
 PA10.Locked=true
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
@@ -132,14 +140,15 @@ ProjectManager.CompilerOptimize=6
 ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=CE
 RCC.LSI_VALUE=37000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA11.Signal=GPIO_Output
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 PA10.Signal=GPIO_Output
 PA15.Signal=GPIO_Output
 ProjectManager.HeapSize=0x200
 Mcu.Pin15=PA12
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.Pin16=PA15
+PA5.GPIOParameters=GPIO_Label
 Mcu.Pin13=PA10
 Mcu.Pin14=PA11
 Mcu.Pin19=PB5
@@ -156,6 +165,8 @@ RCC.PWRFreq_Value=2097000
 RCC.APB1Freq_Value=2097000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_256
 PB0.Signal=GPIO_Output
+PA4.GPIO_Label=BUTTON_DOWN
+PA7.GPIOParameters=GPIO_Label
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DeviceId=STM32L010K4Tx
 PC14-OSC32_IN.Locked=true
@@ -163,6 +174,7 @@ ProjectManager.LibraryCopy=1
 RCC.LPTIMFreq_Value=2097000
 PB3.Locked=true
 PB4.Signal=SPI1_MISO
+PA3.GPIO_Label=RED_LASER
 PA3.Signal=GPIO_Output
 PA7.Signal=GPIO_Input
 RCC.TIMFreq_Value=2097000
